--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="de.upb.mobilerendering"
+    package="de.padrend.mobile"
     android:versionCode="1"
     android:versionName="1.0" >
 
@@ -19,7 +19,7 @@
         android:icon="@drawable/icon"
         android:label="@string/app_name" >
         <activity
-            android:name=".MobileRendering"
+            android:name="de.padrend.mobile.PADrendMobile"
             android:label="@string/app_name"
             android:launchMode="singleTask"
             android:screenOrientation="landscape" >
@@ -30,7 +30,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".gui.LoadSceneActivity"
+            android:name="de.padrend.mobile.gui.LoadSceneActivity"
             android:label="@string/loadScene"
             android:screenOrientation="landscape" >
         </activity>
